--- a/build.gradle
+++ b/build.gradle
@@ -49,13 +49,33 @@ buildConfig {
     buildConfigField 'String', 'POSTGRE_TEST_DB_URL', project.postgreTestUrl
 }
 
-
 repositories {
     mavenCentral()
 }
 
+sourceSets {
+    main {
+        java {
+            srcDir 'src'
+        }
+    }
+
+    test {
+        java {
+            srcDir 'test'
+        }
+    }
+}
+
+test {
+    testLogging {
+        events "passed", "skipped", "failed", "standardOut", "standardError"
+    }
+}
+
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
     compile group: 'org.postgresql', name: 'postgresql', version: '42.1.1'
 }
