--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ if (secretPropsFile.exists()) {
         ext[name] = value
     }
 } else {
-    throw new IllegalStateException("secret.properties could not be located for build process")
+    throw new IllegalStateException("local.properties could not be located for build process")
 }
 
 buildConfig {
