--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ services:
 
 before_install:
   - psql -c 'create database travis_ci_test;' -U postgres
+  - psql -U postgres -d travis_ci_test -a -f tables.sql
   - cp local.properties.travis local.properties
 
 script:
