--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     </parent>
 
     <properties>
-        <start-class>sk.tuke.gamestudio.SpringClient</start-class>
+        <start-class>sk.tuke.gamestudio.server.GameStudioServer</start-class>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
